@@ -25,10 +25,10 @@ project(LINPHONE C CXX)
 
 
 set(LINPHONE_MAJOR_VERSION "3")
-set(LINPHONE_MINOR_VERSION "8")
-set(LINPHONE_MICRO_VERSION "5")
+set(LINPHONE_MINOR_VERSION "9")
+set(LINPHONE_MICRO_VERSION "0")
 set(LINPHONE_VERSION "${LINPHONE_MAJOR_VERSION}.${LINPHONE_MINOR_VERSION}.${LINPHONE_MICRO_VERSION}")
-set(LINPHONE_SO_VERSION "7")
+set(LINPHONE_SO_VERSION "8")
 
 file(GLOB LINPHONE_PO_FILES RELATIVE "${CMAKE_CURRENT_LIST_DIR}/po" "${CMAKE_CURRENT_LIST_DIR}/po/*.po")
 string(REGEX REPLACE "([a-zA-Z_]+)\\.po" "\\1" LINPHONE_ALL_LANGS_LIST "${LINPHONE_PO_FILES}")
